--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "blogger-client",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://edgarberlinck.github.io",
   "dependencies": {
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
