--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
   "private": true,
   "homepage": "https://edgarberlinck.github.io",
   "dependencies": {
+    "bootstrap": "^4.1.3",
     "dotenv": "^6.1.0",
     "react": "^16.6.3",
     "react-dom": "^16.6.3",
-    "react-scripts": "2.1.1"
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "2.1.1",
+    "react-social-icons": "^3.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
